# tsukasa--og8yhx

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-cd.yml  backend-ci.yml  freebsd-cd.yml  freebsd-ci.yml  security-scan.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/: DEPLOYMENT.md  MONITORING.md  README.md  SECURITY.md
infrastructure/config/: alertmanager.yml  elasticsearch.yml  fluentd.conf  grafana.json  kibana.yml  prometheus.yml
infrastructure/docker/: backend.Dockerfile  monitoring.Dockerfile  temporal.Dockerfile
infrastructure/kubernetes/: backend-deployment.yaml  backend-service.yaml  configmaps.yaml  ingress.yaml  monitoring-deployment.yaml  monitoring-service.yaml  secrets.yaml  temporal-deployment.yaml  temporal-service.yaml
infrastructure/scripts/: deploy_app.sh  monitor_deployment.sh  rollback.sh  setup_infra.sh  update_app.sh
infrastructure/terraform/: backend.tf  main.tf  outputs.tf  (+2 more)
src/backend/: .dockerignore  .env.example  Cargo.toml  README.md  docker-compose.yml  rust-toolchain.toml  temporal.yaml  tsconfig.json
src/backend/benches/: ml_bench.rs  security_bench.rs  storage_bench.rs
src/backend/docs/: API.md  ARCHITECTURE.md  ML.md  README.md  SECURITY.md
src/backend/scripts/: benchmark.sh  deploy.sh  setup.sh  test.sh
src/backend/src/: lib.rs  main.rs
src/backend/src/api/: mod.rs
src/backend/src/api/grpc/: guardian_service.rs  ml_service.rs  mod.rs  security_service.rs
src/backend/src/api/proto/: guardian.proto  ml.proto  security.proto
src/backend/src/cli/: mod.rs
src/backend/src/cli/commands/: config.rs  mod.rs  models.rs  status.rs  threats.rs
src/backend/src/config/: app_config.rs  ml_config.rs  mod.rs  security_config.rs  storage_config.rs
src/backend/src/core/: event_bus.rs  guardian.rs  metrics.rs  mod.rs  system_state.rs
src/backend/src/ml/: feature_extractor.rs  inference_engine.rs  mod.rs  model_manager.rs  model_registry.rs  training_pipeline.rs
src/backend/src/security/: anomaly_detection.rs  audit.rs  crypto.rs  mod.rs  response_engine.rs  threat_detection.rs
src/backend/src/storage/: event_store.rs  metrics_store.rs  mod.rs  model_store.rs  zfs_manager.rs
src/backend/src/temporal/: mod.rs
src/backend/src/temporal/activities/: maintenance_activities.rs  mod.rs  monitoring_activities.rs  security_activities.rs
src/backend/src/temporal/workflows/: maintenance_workflow.rs  mod.rs  monitoring_workflow.rs  security_workflow.rs
src/backend/src/utils/: error.rs  logging.rs  metrics.rs  mod.rs  validation.rs
src/backend/tests/integration/: api_tests.rs  ml_tests.rs  mod.rs  security_tests.rs  storage_tests.rs  temporal_tests.rs
(+105 files in other folders)
